Made gif loading fixes. Data sync fixes